--- a/css/index.css
+++ b/css/index.css
@@ -10,7 +10,8 @@
 	border: 1px solid;
 	width: 800px;
 	margin-left:29%;
-	background-color:#BDBDBD;	
+	background-color:#BDBDBD;
+	margin: 0 auto;
 
 }
 
